--- a/my-app/src/Components/Styles/Header.css
+++ b/my-app/src/Components/Styles/Header.css
@@ -75,9 +75,9 @@
   cursor: pointer;
   transition: background-color 0.3s;
   margin-right: 20px;
-  /* margin-bottom:3px;
+  margin-bottom:3px;
   margin-top: 3px;
-  width:10rem; */
+  width:10rem;
 }
 
 .login-button:hover {
