--- a/my-app/src/Components/Styles/EditProfile.css
+++ b/my-app/src/Components/Styles/EditProfile.css
@@ -141,3 +141,26 @@
     }
   }
   
+  .error-text-2 {
+    color: #fff;
+    font-size: 14px;
+    margin-top: 10px;
+    text-align: left;
+    background-color: rgba(200, 87, 89, 0.1);
+    padding: 8px;
+    border: 1px solid #ff0004;
+    border-radius: 4px;
+    margin-bottom: 10px;
+    margin-right: 50px;
+  }
+
+  .password-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .password-eye-icon {
+    margin-left: -30px; /* Adjust the icon position */
+    cursor: pointer;
+  }
+  
