--- a/my-app/src/Components/Styles/Register.css
+++ b/my-app/src/Components/Styles/Register.css
@@ -123,16 +123,27 @@
 }
 
 .close-btn {
+  background: transparent;
+  border: none;
   position: absolute;
   top: 10px;
   right: 10px;
-  background: none;
-  border: none;
-  font-size: 24px;
-  color: #ffffff;
   cursor: pointer;
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s ease;
 }
 
 .close-btn:hover {
-  color: #ff7d00;
+  transform: scale(1.1); /* Slight zoom on hover */
 }
+
+.close-btn:focus {
+  outline: none; /* Remove focus outline */
+}
+
+/* .close-btn:hover {
+  color: #ff7d00;
+} */
