edit_quiz_updated_width

--- a/my-app/src/Components/Styles/EditQuiz.css
+++ b/my-app/src/Components/Styles/EditQuiz.css
@@ -10,13 +10,14 @@
   padding: 40px;
   background-color: var(--background-color);
   color: var(--text-color);
-  min-height: 100vh;
-  min-width: 230vh;
+  min-height: 100vh; /* Full viewport height */
+  min-width: auto; /* Full viewport width */
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
 }
+
 
 .title {
   font-family: 'Poppins', sans-serif;
