--- a/my-app/src/Components/Styles/Login.css
+++ b/my-app/src/Components/Styles/Login.css
@@ -13,7 +13,7 @@
 }
 
 .login-container {
-  background-color: #0e1325;
+  background-color: #000e3dfb;
   color: #ffffff;
   width: 300px;
   padding: 30px;
@@ -32,9 +32,9 @@
   width: 100%;
   padding: 12px;
   margin: 8px 0;
-  background-color: #11172f;
+  background-color: #0a194f;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   color: #ffffff;
   font-size: 16px;
 }
@@ -53,9 +53,9 @@
 .password-container input {
   width: 100%;
   padding: 12px 10px 12px 10px; 
-  background-color: #11172f;
+  background-color: #0a194f;
   border: none;
-  border-radius: 4px;
+  border-radius: 5px;
   color: #ffffff;
   font-size: 16px;
 }
@@ -63,7 +63,7 @@
 .login-button {
   width: 100%;
   padding: 12px;
-  background-color: #ff7d00;
+  background-color: #ff9100;
   border: none;
   border-radius: 4px;
   color: #ffffff;
@@ -74,7 +74,7 @@
 }
 
 .login-button:hover {
-  background-color: #e36f00;
+  background-color: #ff5e00;
 }
 
 .member-text {
@@ -83,7 +83,7 @@
 }
 
 .register-link {
-  color: #ff7d00;
+  color: #ff9100;
   text-decoration: none;
   font-weight: bold;
   cursor: pointer;
@@ -117,5 +117,5 @@
 
 
 /* .close-btn:hover {
-  color: #ff7d00;
+  color: #ff9100;
 } */
