--- a/my-app/src/Components/Styles/CreateCourse.css
+++ b/my-app/src/Components/Styles/CreateCourse.css
@@ -1,10 +1,10 @@
 Define color variables for easy maintenance
 :root {
-    --primary-color: #ff7900;         /* Main button color */
+    --primary-color: #ff9100;         /* Main button color */
     --secondary-color: #ffffff;       /* Background color for buttons and panels */
-    --hover-color: #ff7900;           /* Orange shade for hover */
+    --hover-color: #ff9100;           /* Orange shade for hover */
     --text-color: #ffffff;            /* General text color */
-    --border-color: #ff7900;          /* Border and accent color */
+    --border-color: #ff9100;          /* Border and accent color */
     
 }
 
@@ -36,7 +36,7 @@ body {
 }
 
 .section-tabs button {
-    background-color:#ff7900;
+    background-color:#ff9100;
     color: #fff;
     border: 2px solid var(--border-color);
     padding: 8px 16px;
@@ -102,7 +102,7 @@ body {
 }
 
 .footer-buttons button {
-    background-color: #ff7900;
+    background-color: #ff9100;
     color: #fff;
     border-radius: 8px;
     padding: 10px 20px;
@@ -110,14 +110,14 @@ body {
 }
 
 .footer-buttons button:hover {
-    background-color: #ff7900;
+    background-color: #ff5e00;
     transform: scale(1.05);
     /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); */
 }
 
 /* General button styling */
 button {
-    background-color: #ff7900;
+    background-color: #ff9100;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -126,7 +126,7 @@ button {
 }
 
 button:hover {
-    background-color: #ff7900;
+    background-color: #ff5e00;
     transform: scale(1.01);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.1);
 }
