--- a/my-app/src/Components/Styles/InstructorDashboard.css
+++ b/my-app/src/Components/Styles/InstructorDashboard.css
@@ -9,13 +9,15 @@
 .courses-page {
     display: flex;
     min-height: 100vh;
-    background-color: #0b0e21; /* Dark Navy Blue */
+    background-color: #000e3dfb; /* Dark Navy Blue */
+    padding-left: 15px;
+    padding-right: 31px;
 }
 
 /* Sidebar Styling */
 .sidebar {
     width: 250px;
-    background-color: #0b0e21; /* Dark Navy Blue */
+    background-color: #0a194f; /* Dark Navy Blue */
     color: #fff;
     padding: 20px;
     height: 100vh;
@@ -25,7 +27,7 @@
 .sidebar h2 {
     font-size: 1.5rem;
     margin-bottom: 20px;
-    color: #ff7900; /* Bright Orange */
+    color: #ff9100; /* Bright Orange */
 }
 
 .sidebar nav ul {
@@ -43,11 +45,11 @@
 
 .sidebar nav ul li:hover,
 .sidebar nav ul li.active {
-    background-color: #1a1e36;
+    background-color: #000927fb;
 }
 
 .sidebar nav ul li.active a {
-    color: #ff7900;
+    color: #ff9100;
 }
 
 /* Main Content Styling */
@@ -55,14 +57,14 @@
     flex: 1;
     padding: 20px;
     margin-left: 0px;
-    background-color: #0b0e21;
+    background-color: #000e3dfb;
     color: #fff;
     overflow-y: auto;
 }
 
 .header-2 h1 {
     font-size: 2rem;
-    color: #ff7900;
+    color: #ff9100;
 }
 
 /* Button Styling */
@@ -72,8 +74,9 @@
     align-items: center;
     padding: 10px 20px;
     font-size: 1rem;
-    color: #fff;
-    background-color: #ff7900;
+    font-weight: 700;
+    color: #ffffff;
+    background-color: #ff9100;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -83,7 +86,7 @@
 
 .create-course-btn:hover,
 .create-quiz-btn:hover {
-    background-color: #e67a00;
+    background-color: #ff5e00;
 }
 
 .create-course-btn svg,
@@ -102,7 +105,8 @@
 .courses-table {
     width: 100%;
     border-collapse: collapse;
-    background-color: #1a1e36;
+    border-radius: 2px;
+    background-color: #000927fb;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin-bottom: 40px;
     color: #fff;
@@ -116,9 +120,9 @@
 }
 
 .courses-table th {
-    background-color: #1a1e36;
+    background-color: #000927fb;
     font-weight: bold;
-    color: #ff7900;
+    color: #ff9100;
 }
 
 .courses-table a {
@@ -140,11 +144,11 @@
     border: none;
     cursor: pointer;
     font-size: 1.2rem;
-    color: #ff7900;
+    color: #ff9100;
 }
 
 .edit-btn:hover {
-    color: #e67a00;
+    color: #ffffff;
 }
 
 /* header-2 Section for Buttons */
@@ -157,7 +161,7 @@
 
 /* Active Sidebar Item Styling */
 .sidebar nav ul li.active {
-    background-color: #1a1e36;
+    background-color: #000e3dfb;
     font-weight: bold;
 }
 
@@ -188,13 +192,13 @@
 .stat-box p {
     font-size: 24px;
     font-weight: bold;
-    color: #1a1e36;
+    color: #000e3dfb;
 }
 
 /* New Title Styling */
 .main-title {
     font-size: 2.5rem;
-    color: #ff7900;
+    color: #ff9100;
     margin-bottom: 20px;
     text-align: center;
 }
