--- a/my-app/src/Components/Styles/Profile.css
+++ b/my-app/src/Components/Styles/Profile.css
@@ -3,7 +3,7 @@
 .profile-container {
   max-width: 1000px;
   width: 100%;
-  background-color: #1b1f38;
+  background-color: #000e3dfb;
   padding: 20px;
   border-radius: 8px;
 }
@@ -14,11 +14,11 @@
 
 .profile-page {
 
-  background-color: #0a194f;
+  background-color: #000e3dfb;
   color: #ffffff;
   min-height: 100vh;
   padding: 20px;
-  font-family: Arial, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .profile-description {
@@ -30,9 +30,12 @@
   width: 90%; /* Optional: Constrain text width for better alignment */
 }
 
-.profile-header nav p {
-  color: #a9b1e3;
-  font-size: 1rem;
+.profile-header {
+  color: #ff5e00;
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 15px;
 }
 
 .profile-content {
@@ -77,7 +80,7 @@
 }
 
 .sidebar-menu .active {
-  background-color: #ff7f11;
+  background-color: #ff5e00;
   color: #ffffff;
   border-radius: 4px;
 }
@@ -122,9 +125,10 @@
 .course-tabs button {
   background-color: #1f3064;
   color: #ffffff;
+  font-weight: bold;
   padding: 10px 15px;
   border: none;
-  border-radius: 4px;
+  border-radius: 2px;
   cursor: pointer;
   transition: background-color 0.3s;
 }
@@ -134,12 +138,12 @@
 }
 
 .course-tabs .active-tab {
-  background-color: #ff7f11;
+  background-color: #ff5e00;
 }
 
 .course-list {
   background-color: #d1e7f3;
-  color: #1b1f38;
+  color: #000927fb;
   padding: 10px;
   border-radius: 4px;
   text-align: center;
