--- a/my-app/src/Components/Styles/Search.css
+++ b/my-app/src/Components/Styles/Search.css
@@ -46,7 +46,7 @@ body {
 
 .filter-btn {
     padding: 10px 20px;
-    background-color: #ff7d00;
+    background-color: #ff9100;
     color: white;
     border: none;
     border-radius: 5px;
@@ -58,7 +58,7 @@ body {
 }
 
 .filter-btn:hover {
-    background-color: #ff6000;
+    background-color: #ff5e00;
 }
 
 .filter-dropdown {
@@ -66,7 +66,7 @@ body {
     top: calc(100% + 5px);
     left: 0; 
     width: 200px;
-    background-color: #1e2a46;
+    background-color: #1f3064;
     color: white;
     padding: 20px;
     border-radius: 8px;
@@ -98,7 +98,7 @@ body {
 
 .apply-btn {
     padding: 8px 16px;
-    background-color: #ff7d00;
+    background-color: #ff9100;
     color: white;
     border: none;
     border-radius: 5px;
@@ -109,7 +109,7 @@ body {
     padding: 8px 16px;
     background-color: transparent;
     color: white;
-    border: 2px solid #ddd;
+    border: 2px solid #ffffff;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -120,12 +120,12 @@ body {
 }
 
 .reset-btn:hover {
-    background-color: #ff6000;
-    border-color: #ff6000;
+    background-color: #ff5e00;
+    border-color: #ff5e00;
 }
 
 .reset-btn:hover, .apply-btn:hover {
-    background-color: #ff6000;
+    background-color: #ff5e00;
 }
 
 .sort-container {
@@ -135,7 +135,7 @@ body {
 
 .sort-btn {
     padding: 10px 20px;
-    background-color: #333;
+    background-color: #ff9100;
     color: white;
     border-radius: 5px;
     cursor: pointer;
@@ -144,7 +144,7 @@ body {
 }
 
 .sort-btn:hover {
-    background-color: #444;
+    background-color: #ff5e00;
 }
 
 .sort-dropdown {
@@ -152,7 +152,7 @@ body {
     top: calc(100% + 5px);
     right: 0;
     width: 170px;
-    background-color: #333;
+    background-color: #1f3064;
     color: white;
     padding: 10px;
     border-radius: 5px;
@@ -172,7 +172,7 @@ body {
 }
 
 .sort-dropdown li:hover {
-    background-color: #444;
+    background-color: #ff5e00;
 }
 
 .courses-container {
@@ -204,7 +204,7 @@ body {
     position: absolute;
     top: 10px;
     left: 10px;
-    background-color: #ff7d00;
+    background-color: #ff9100;
     padding: 3px 8px; 
     border-radius: 5px;
     font-weight: 600;
@@ -247,7 +247,7 @@ body {
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #1e2a46;
+    background-color: #1f3064;
     color: white;
     border: none;
     border-radius: 50%;
@@ -269,7 +269,7 @@ body {
   }
   
   .toast-message {
-    background-color: #333;
+    background-color: #ff9100;
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
